--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,17 @@ body, html {
     height: 100%;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 1.5em;
+}
+
 /*Header Elements --------------------------------------------------------------------*/
 
 #header {
     height: 12%;
-    border: 1px solid black ;
     padding: 1.5em;
     display: flex;
     justify-content: center;
@@ -23,7 +29,6 @@ body, html {
 
 #nameAndLogo {
     flex: 1;
-    border: 1px solid black;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -42,7 +47,6 @@ body, html {
 
 #navBar {
     flex: 2;
-    border: 1px solid black;
     height: 100%;
     display: flex;
     align-items: center;
@@ -59,6 +63,7 @@ body, html {
 
 #navBar > menu > li {
     list-style: none;
+    position: relative;
 }
 
 #navBar > menu > li > a {
@@ -68,9 +73,26 @@ body, html {
     color: black;
 }
 
+#navBar > menu > li > a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 300ms ease-in;
+}
+
+#navBar > menu > li > a:hover::before {
+    transform: scaleX(1);
+}
+
 #socialLinks {
     flex: 1;
-    border: 1px solid black;
     height: 100%;
     display: flex;
     align-items: center;
@@ -120,7 +142,8 @@ body, html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 4em;
+    align-items: center;
+    text-align: center;
     font-size: 4.5em;
     font-weight: 650;
 }
@@ -161,16 +184,102 @@ body, html {
     align-items: center;
     font-size: 1.3em;
     font-weight: 700;
+    text-decoration: none;
+    color: black;
 }
 
 .piCompTitle > p {
     text-align: center;
+    position: relative;
+}
+
+.piCompTitle > p::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 0.3s ease-in-out;
+}
+
+
+.piCompTitle:hover > p::before{
+    transform: scaleX(1);
 }
 
 .piCompImage > img {
-    height: 200px;
-    width: auto;
+    height: 0%;
+    width: 300px;
 }
+/*------------------------------------------------------------------------------------*/
+
+/*About Page CSS ---------------------------------------------------------------------*/
+
+#main {
+    height: 60%;
+    width: 55%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex; 
+    text-align: center;
+    position: relative;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1.5em;
+    padding: 2em;
+    border-radius: 6em;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+#main > P {
+    font-size: 1.4em;   
+    font-weight: 600;
+    word-spacing: .15em;
+    line-height: 1.5em;
+}
+
+#steve1 {
+    height: 400px;
+    position: absolute;
+    bottom: 25%;
+    left: -25%;
+}
+
+#steve2 {
+    height: 350px;
+    position: absolute;
+    bottom: 25%;
+    right: -25%;
+}
+/*------------------------------------------------------------------------------------*/
+
+/*Footer Style -----------------------------------------------------------------------*/
+
+#footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1em;
+}
+
+/*------------------------------------------------------------------------------------*/
+
+/*Media Queries -> 1968px ------------------------------------------------------------*/
+
+@media screen and (max-width: 1968px) {
+    #productImages {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
+    }
+}
+
 /*------------------------------------------------------------------------------------*/
 
 /*Media Queries -> 1540px ------------------------------------------------------------*/
@@ -190,6 +299,24 @@ body, html {
 
     #instagram > ion-icon, #twitter > ion-icon {
         font-size: 1.5em;
+    }
+}
+
+/*------------------------------------------------------------------------------------*/
+
+/*Media Queries -> 1440px ------------------------------------------------------------*/
+
+@media screen and (max-width: 1440px) {
+    #main {
+        height: 65%;
+    }
+
+    #steve1 {
+        left: -36%;
+    }
+
+    #steve2 {
+        right: -39%;
     }
 }
 
@@ -217,6 +344,45 @@ body, html {
 
 /*------------------------------------------------------------------------------------*/
 
+/*Media Queries -> 1240px ------------------------------------------------------------*/
+
+@media  screen and (max-width: 1240px) {
+    #productImages {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        padding: 0%;
+    }
+
+    .piCompImage > img {
+        height: 180px;
+        width: 270px;
+    }
+}
+
+/*------------------------------------------------------------------------------------*/
+
+/*Media Queries -> 1024px ------------------------------------------------------------*/
+
+@media screen and (max-width: 1024px) {
+    #main {
+        height: 55%;
+    }
+
+    #main > p {
+        font-size: 1.1em;
+    }
+
+    #steve1 {
+        height: 300px;
+    }
+
+    #steve2 {
+        height: 270px;
+    }
+}
+
+/*------------------------------------------------------------------------------------*/
+
 /*Media Queries -> 972px -------------------------------------------------------------*/
 
 @media screen and (max-width: 972px) {
@@ -238,6 +404,33 @@ body, html {
         flex: 1.7;
         justify-content: flex-end;
     }
+
+    .piCompImage > img {
+        height: 140px;
+        width: 210px;
+    }
+
+    #footer {
+        margin-top: 2em;
+    }
+}
+
+/*------------------------------------------------------------------------------------*/
+
+/*Media Queries -> 768px -------------------------------------------------------------*/
+
+@media screen and (max-width: 768px) {
+    #main > p {
+        font-size: 0.9rem;
+    }
+
+    #steve1 {
+        height: 235px;
+    }
+
+    #steve2 {
+        height: 205px;
+    }
 }
 
 /*------------------------------------------------------------------------------------*/
@@ -255,6 +448,29 @@ body, html {
 
     #dropdownMenu > ion-icon {
         font-size: 2em;
+    }
+
+    #main {
+        height: 65%;
+        width: 80%;
+        padding-top: 5em;
+        padding-bottom: 4em;
+        border: none;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
+    }
+
+    #steve1 {
+        height: 170px;
+        top: -20%;
+        left: -13%;
+    }
+
+    #steve2 {
+        overflow: hidden;
+        height: 170px;
+        bottom: -11%;
+        right: -26%;
     }
 }
 
